--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "^4.7.0",
+    "babel-plugin-react-html-attrs": "^2.1.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^4.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-mixin": "^2.0.2",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "style-loader": "^2.0.0",
+    "typescript": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
